examples/test/testpolicy6357.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6357
  namespace: namespace391
spec:
  podSelector:
    matchLabels:
      key47: value14
      key5: value27
      key13: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value38
          key33: value26
      podSelector:
        matchLabels:
          key48: value41
          key38: value38
